// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberItem /> can be rendered 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderBottomColor": "#fafafa",
      "borderBottomWidth": 1,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "paddingHorizontal": 10,
      "paddingVertical": 20,
    }
  }
  testID="number-item-touchable-test"
>
  <Text
    style={
      Object {
        "fontSize": 24,
        "paddingBottom": 10,
      }
    }
  >
    Some number
  </Text>
  <TextInput
    allowFontScaling={true}
    defaultValue="42"
    keyboardType="number-pad"
    onChangeText={[Function]}
    rejectResponderTermination={true}
    style={
      Object {
        "fontSize": 18,
      }
    }
    testID="number-item-input-test"
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`<NumberItem /> can be rendered when value is not ready 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderBottomColor": "#fafafa",
      "borderBottomWidth": 1,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "paddingHorizontal": 10,
      "paddingVertical": 20,
    }
  }
  testID="number-item-touchable-test"
>
  <Text
    style={
      Object {
        "fontSize": 24,
        "paddingBottom": 10,
      }
    }
  >
    Some number
  </Text>
</View>
`;
